--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -5473,3 +5473,17 @@
 "rakennuspaikka.hankkeestaIlmoitettu._group_label" "sv" "Information om projektet finns på byggplatsen"
 "hankkeestaIlmoitettu.groupHelpText" "fi" "Hakijana vakuutan, että rakennuspaikalla on ilmoitettu hankkeesta kyltillä seuraavasta päivämäärästä alkaen."
 "hankkeestaIlmoitettu.groupHelpText" "sv" "Som sökande intygar jag att det på byggplatsen finns en skylt som informerar om projektet från och med"
+"osapuoli.kuntaRoolikoodi.rakennussuunnittelija" "fi" "Rakennussuunnittelija"
+"osapuoli.kuntaRoolikoodi.rakennussuunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.kantavien rakenteiden suunnittelija" "fi" "Kantavien rakenteiden suunnittelija"
+"osapuoli.kuntaRoolikoodi.kantavien rakenteiden suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.pohjarakenteiden suunnittelija" "fi" "Pohjarakenteiden suunnittelija"
+"osapuoli.kuntaRoolikoodi.pohjarakenteiden suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.ilmanvaihdon suunnittelija" "fi" "Ilmanvaihdon suunnittelija"
+"osapuoli.kuntaRoolikoodi.ilmanvaihdon suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.vesiviemarisuunnittelija" "fi" "Kiinteistön vesi- ja viemäröintilaitteiston suunnittelija"
+"osapuoli.kuntaRoolikoodi.vesiviemarisuunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "fi" "Rakennusfysikaalinen suunnittelija"
+"osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "sv" ""
+"osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "fi" "Kosteusvaurion korjaustyön suunnittelija"
+"osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "sv" ""
