--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -3539,6 +3539,8 @@
 "organization.openinforequest.enabled" "sv" "Öppen begäran om rådgivning på"
 "organization.scope" "fi" "Konfiguraatio"
 "organization.scope" "sv" "Konfiguraatio"
+"organization.krysp.ftp-user" "fi" "SFTP-käyttäjätunnus"
+"organization.krysp.ftp-user" "sv" "SFTP-användarnamn"
 "osapuoli.muutHankkeet._append_label" "fi" "Lisää rivi"
 "osapuoli.muutHankkeet._append_label" "sv" "Tillägg rad"
 "osapuoli.muutHankkeet._copy_label" "fi" "Kopioi viimeinen rivi"
