Safety commit to get TAGS working.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1390,6 +1390,12 @@
 "auth-admin.email-notifications.param-name" "sv" "Skeende"
 "auth-admin.email-notifications.param-value" "fi" "Sähköpostiosoitteet"
 "auth-admin.email-notifications.param-value" "sv" "E-postadresser"
+"auth-admin.guest-authorities.help" "fi" "Käyttäjät, joille viranomainen voi antaa lukuoikeuden yksittäiselle hankkeelle. Nämä käyttäjät liitetään myös organisaation viranomaisiksi. Tarvittaessa luodaan uusi käyttäjä."
+"guest-authorities.title" "fi" "Hankekohtainen lukuoikeus"
+"guest-authority.role" "fi" "Rooli"
+"guest-authority.name" "fi" "Nimi"
+"guest-authority.email" "fi" "Sähköposti"
+"guest-authority.add" "fi" "Lisää lukuoikeus"
 "auth-admin.kopiolaitosEmail" "fi" "sähköpostiosoite@esimerkki.fi"
 "auth-admin.kopiolaitosEmail" "sv" "e-postadress@exempel.fi"
 "auth-admin.kopiolaitos-email.title" "fi" "Kopiolaitoksen sähköpostiosoite"
@@ -1544,7 +1550,7 @@
 "authorityrole.authorityAdmin" "sv" "Huvudanvändare"
 "authorityrole.commenter" "fi" "Kommentointioikeus"
 "authorityrole.commenter" "sv" "Kommenteringsrätt"
-"authorityrole.guest" "fi" "Hakemuskohtainen lukuoikeus (kutsuttava)"
+"authorityrole.guest" "fi" "Hankekohtainen lukuoikeus (kutsuttava)"
 "authorityrole.reader" "fi" "Lukuoikeus"
 "authorityrole.reader" "sv" "Läsrättigheter"
 "authorityrole.tos-editor" "fi" "Tiedonohjaussuunnitelman muokkaaja"
