add missing localizations

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -4933,3 +4933,9 @@
 "error.invalid-municipality" "sv" ""
 "caseFile.tab" "fi" "Käsittelytiedot"
 "caseFile.tab" "sv" ""
+"help.bulletin.verdicts" "fi" " "
+"help.bulletin.verdicts" "sv" " "
+"help.bulletin.comments" "fi" " "
+"help.bulletin.comments" "sv" " "
+"help.bulletin.attachments" "fi" " "
+"help.bulletin.attachments" "sv" " "
