Guest invitation now works for applicants.
It seems that two roles are needed in the future:
guest and guestAuthority in order to easily
differentiate between guests with different
orgins (inviters).

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1390,14 +1390,6 @@
 "auth-admin.email-notifications.param-name" "sv" "Skeende"
 "auth-admin.email-notifications.param-value" "fi" "Sähköpostiosoitteet"
 "auth-admin.email-notifications.param-value" "sv" "E-postadresser"
-"auth-admin.guest-authorities.help" "fi" "Käyttäjät, joille viranomainen voi antaa lukuoikeuden yksittäiselle hankkeelle. Nämä käyttäjät liitetään myös organisaation viranomaisiksi. Tarvittaessa luodaan uusi käyttäjä."
-"guest-authorities.title" "fi" "Hankekohtainen lukuoikeus"
-"guest-authority.role" "fi" "Rooli"
-"guest-authority.name" "fi" "Nimi"
-"guest-authority.email" "fi" "Sähköposti"
-"guest-authority.add" "fi" "Lisää lukuoikeus"
-"guest-authority.has-access" "fi" "Käyttäjällä on jo lukuoikeus kaikkiin organisaation hakemuksiin."
-"guest-authority.failure" "fi" "Toimenpide epäonnistui. Yritä myöhemmin uudelleen."
 "auth-admin.kopiolaitosEmail" "fi" "sähköpostiosoite@esimerkki.fi"
 "auth-admin.kopiolaitosEmail" "sv" "e-postadress@exempel.fi"
 "auth-admin.kopiolaitos-email.title" "fi" "Kopiolaitoksen sähköpostiosoite"
@@ -1951,7 +1943,7 @@
 "create.search-map" "sv" "Ange projektets adress eller fastighetsbeteckning"
 "createApplication.loc-info" "fi" "Määritä hankkeen sijainti valitsemalla paikka kartalta tai antamalla alla olevaan kenttään osoite tai kiinteistötunnus."
 "createApplication.loc-info" "sv" "Ange projektets placering genom att välja platsen på kartan eller genom att skriva in adressen eller fastighetsbeteckningen i nedanstående fält."
-"createApplication.new-application" "fi" "Uusi hakemus"
+"createApplication.new-applicaticdon" "fi" "Uusi hakemus"
 "createApplication.new-application" "sv" "Ny ansökan"
 "createApplication.project-address" "fi" "Osoite:"
 "createApplication.project-address" "sv" "Adress:"
