Guest notification subscriptions and deletion.

--- a/resources/i18n/guests.txt
+++ b/resources/i18n/guests.txt
@@ -13,3 +13,9 @@
 "application-guests.message.default" "fi" "Hei! Sinulle on annettu lukuoikeus hakemukselle Lupapisteessä."
 "error.already-has-access" "fi" "Käyttäjällä on jo lukuoikeus hakemukselle."
 "application-guests.caption" "fi" "Valitse henkilö, jolle lukuoikdeudet annetaan"
+"application-guests.user" "fi" "Lukuoikeuden käyttäjä"
+"application-guests.inviter" "fi" "Kutsuja"
+"application-guests.notifications" "fi" "Sähköposti-ilmoitukset"
+"application-guests.remove" "fi" "Poista lukuoikeus"
+"application-guests.subscribe" "fi" "Tilaa ilmoitukset"
+"application-guests.unsubscribe" "fi" "Peruuta ilmoitukset"
