Fix column headers in case-file-template

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1776,8 +1776,8 @@
 "caseFile.action" "sv" "Behandlingsskede"
 "caseFile.actionDate" "fi" "Vaiheen alku"
 "caseFile.actionDate" "sv" "Skedets inledningsdatum"
-"caseFile.documentDate" "fi" "Toimituspäivämäärä"
-"caseFile.documentDate" "sv" "Inlämningsdatum"
+"caseFile.documentDate" "fi" "Aloitus- tai toimituspäivämäärä"
+"caseFile.documentDate" "sv" "Start- eller inlämningsdatum"
 "caseFile.heading" "fi" "Käsittelyprosessin tiedot"
 "caseFile.heading" "sv" "Uppgifter om behandlingsprocessen"
 "choose" "fi" "Valitse…"
@@ -4941,3 +4941,5 @@
 "help.bulletin.attachments" "sv" " "
 "arkistoidaan" "fi" "Arkistoidaan"
 "arkistoidaan" "sv" ""
+"lisaaja" "fi" "Lisääjä"
+"lisaaja" "sv" ""
