Modified reset password help text to work better with frontpage context

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -3907,8 +3907,8 @@
 "reset.send" "sv" "Sänd"
 "reset.sent.1" "fi" "Sähköposti lähetetty."
 "reset.sent.1" "sv" "Meddelande har sänts."
-"reset.sent.2" "fi" "Seuraa ohjeita sähköpostistasi. Voit sulkea tämän ikkunan."
-"reset.sent.2" "sv" "Följ anvisningarna i din e-post. Du kan stänga detta fönster."
+"reset.sent.2" "fi" "Seuraa ohjeita sähköpostistasi."
+"reset.sent.2" "sv" "Följ anvisningarna i din e-post."
 "reset.title" "fi" "Salasanan vaihtaminen"
 "reset.title" "sv" "Ändra lösenord"
 "rest-api" "fi" "Järjestelmäkäyttäjä"
