Added PDF-A conversion for Katselmus (OK)

--- a/resources/i18n/schemas.txt
+++ b/resources/i18n/schemas.txt
@@ -5487,3 +5487,19 @@
 "osapuoli.kuntaRoolikoodi.rakennusfysikaalinen suunnittelija" "sv" ""
 "osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "fi" "Kosteusvaurion korjaustyön suunnittelija"
 "osapuoli.kuntaRoolikoodi.kosteusvaurion korjaustyön suunnittelija" "sv" ""
+"task-katselmus.katselmus.huomautukset.maaraAika.export" "fi" "Huomautuksen määräaika"
+"task-katselmus.katselmus.huomautukset.maaraAika.export" "sv" ""
+"task-katselmus.katselmus.huomautukset.toteaja.export" "fi" "Huomautuksen toteaja"
+"task-katselmus.katselmus.huomautukset.toteaja.export" "sv" ""
+"task-katselmus.katselmus.huomautukset.toteamisHetki.export" "fi" "Huomautuksen toteamishetki"
+"task-katselmus.katselmus.huomautukset.toteamisHetki.export" "sv" ""
+"task-katselmus.rakennus.kiinteistotunnus" "fi" "Kiinteistötunnus"
+"task-katselmus.rakennus.kiinteistotunnus" "sv" ""
+"task-katselmus.rakennus.rakennusnumero" "fi" "Rakennusnumero"
+"task-katselmus.rakennus.rakennusnumero" "sv" ""
+"task-katselmus.rakennus.jarjestysnumero" "fi" "Järjestysnumero"
+"task-katselmus.rakennus.jarjestysnumero" "sv" ""
+"task-katselmus.rakennus.valtakunnallinenNumero" "fi" "Valtakunnallinen numero"
+"task-katselmus.rakennus.valtakunnallinenNumero" "sv" ""
+"task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "fi" "Kunna sisäinen pysyvä numero"
+"task-katselmus.rakennus.kunnanSisainenPysyvaRakennusnumero" "sv" ""
