Localization changes to registration page.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -606,18 +606,18 @@
 "applications.loading" "sv" "Laddar ned ansökningar"
 "applications.location" "fi" "Sijainti"
 "applications.location" "sv" "Läg"
-"applications.missing.application.desc" "fi" "Jos tiedät tarvitsevasi luvan tai sinun pitää tehdä ilmoitus toimenpiteestäsi voit tehdä suoraan lupahakemuksen. Sinua pyydetään ilmoittamaan rakennuspaikka ja kuvaamaan toimenpide. Tämän jälkeen saat perustietoja luvan tarpeesta ja tarvittavista liitteistä. Voit myös kutsua mukaan suunnittelijoita ja kanssahakijoita tehtyäsi lupahakemuksen, jolloin voitte valmistella lupaa yhdessä Lupapisteessä.Ohjeet löydät <a href=\"https://www.lupapiste.fi/ohjeet/yleisohjeet/lupahakemuksen-tekeminen\" target=\"_blank\">täältä </a>"
-"applications.missing.application.desc" "sv" "Om redan vet att ditt projekt kräver ett tillstånd eller att åtgärden måste anmälas kan du göra en tillståndsansökan direkt. Du ombes då meddela byggnadsplats och beskriva åtgärden. Därefter får du grundinformation om vad som behövs för tillståndet och nödvändiga bilagor. Du kan också bjuda in planerare och medsökande när du har gjort ansökan. Därefter kan ni tillsammans förbereda tillståndet i Lupapiste"
+"applications.missing.application.desc" "fi" "Jos tiedät tarvitsevasi luvan tai sinun pitää tehdä ilmoitus toimenpiteestäsi voit tehdä suoraan lupahakemuksen. Sinua pyydetään ilmoittamaan rakennuspaikka ja kuvaamaan toimenpide. Tämän jälkeen saat perustietoja luvan tarpeesta ja tarvittavista liitteistä. Voit myös kutsua mukaan suunnittelijoita ja kanssahakijoita tehtyäsi lupahakemuksen, jolloin voitte valmistella lupaa yhdessä Lupapisteessä. Ohjeet löydät <a href=\"https://www.lupapiste.fi/ohjeet/yleisohjeet/lupahakemuksen-tekeminen\" target=\"_blank\">täältä</a>."
+"applications.missing.application.desc" "sv" "Om redan vet att ditt projekt kräver ett tillstånd eller att åtgärden måste anmälas kan du göra en tillståndsansökan direkt. Du ombes då meddela byggnadsplats och beskriva åtgärden. Därefter får du grundinformation om vad som behövs för tillståndet och nödvändiga bilagor. Du kan också bjuda in planerare och medsökande när du har gjort ansökan. Därefter kan ni tillsammans förbereda tillståndet i Lupapiste."
 "applications.missing.application.title" "fi" "Hakemus"
 "applications.missing.application.title" "sv" "Ansökan"
-"applications.missing.inforequest.desc" "fi" "Jos haluat varmistaa luvan tarpeen viranomaiselta tai selvittää muita asioita viranomaiselta, voit tehdä neuvontapyynnön. Neuvontapyyntöä tehdessä sinua pyydetään ilmoittamaan rakennuspaikan sijainti ja kuvaamaan mitä olet tekemässä. Näillä tiedoilla rakennusvalvonta voi antaa sinulle paremman vastauksen kysymykseesi. Voit katsoa ohjeet myös <a href=\"https://www.lupapiste.fi/ohjeet/yleisohjeet/neuvontapyynnon-tekeminen\" target=\"_blank\">täältä </a>"
-"applications.missing.inforequest.desc" "sv" "Om du vill ta reda på om ditt projekt kräver ett tillstånd eller reda ut andra saker med myndighetens hjälp kan du göra en rådgivningsbegäran. Vid en rådgivningsbegäran ombes du meddela byggnadsplats och beskriva vad du planerar att göra. Med dessa uppgifter kan byggnadstillsynen ge dig ett bättre svar på din fråga"
+"applications.missing.inforequest.desc" "fi" "Jos haluat varmistaa luvan tarpeen viranomaiselta tai selvittää muita asioita viranomaiselta, voit tehdä neuvontapyynnön. Neuvontapyyntöä tehdessä sinua pyydetään ilmoittamaan rakennuspaikan sijainti ja kuvaamaan mitä olet tekemässä. Näillä tiedoilla rakennusvalvonta voi antaa sinulle paremman vastauksen kysymykseesi. Voit katsoa ohjeet myös <a href=\"https://www.lupapiste.fi/ohjeet/yleisohjeet/neuvontapyynnon-tekeminen\" target=\"_blank\">täältä</a>"
+"applications.missing.inforequest.desc" "sv" "Om du vill ta reda på om ditt projekt kräver ett tillstånd eller reda ut andra saker med myndighetens hjälp kan du göra en rådgivningsbegäran. Vid en rådgivningsbegäran ombes du meddela byggnadsplats och beskriva vad du planerar att göra. Med dessa uppgifter kan byggnadstillsynen ge dig ett bättre svar på din fråga."
 "applications.missing.inforequest.title" "fi" "Neuvontapyyntö"
 "applications.missing.inforequest.title" "sv" "Rådgivningsbegäran"
 "applications.newAttachments" "fi" ""
 "applications.newAttachments" "sv" ""
 "applications.no-match.desc" "fi" "Annetuilla hakuehdoilla ei löydy yhtään hakemusta."
-"applications.no-match.desc" "sv" "Med givna sökkriterier hittas ingen ansökan"
+"applications.no-match.desc" "sv" "Med givna sökkriterier hittas ingen ansökan."
 "applications.no-match.title" "fi" "Hakemuksia ei löydy"
 "applications.no-match.title" "sv" "Ansökningar hittas ej"
 "applications.openApplication" "fi" "Avaa hakemus"
@@ -1848,7 +1848,7 @@
 "company.user.op.delete.true.message" "sv" "<p>Vill du stryka användare <b>{0}</b> ur företaget?</p>\n<p>Användarnamnet stängs i Lupapiste. Användaren kan logga in efter återställning av lösenordet och ser fortsättningsvis de projekt hen har skapat. <br/>Om ditt företag har tagit användarens e-postadress  ur bruk kan användaren inte längre öppna sitt användarnamn.</p>"
 "company.user.op.delete.true.title" "fi" "Yrityskäyttäjän poistaminen"
 "company.user.op.delete.true.title" "sv" "Borttagning av företagsanvändare"
-"company.user.op.delete-invite.true.message" "fi" "Oletko varma että haluat peruuttaa lähetyn kutsun?"
+"company.user.op.delete-invite.true.message" "fi" "Oletko varma että haluat peruuttaa lähetetyn kutsun?"
 "company.user.op.delete-invite.true.message" "sv" "Är du säker på att du vill upphäva en inbjudan som har skickats?"
 "company.user.op.delete-invite.true.title" "fi" "Yrityskäyttäjäkutsun peruuttaminen"
 "company.user.op.delete-invite.true.title" "sv" "Upphäv inbjudan av företagsanvändare"
@@ -3741,8 +3741,8 @@
 "register.company.add-user.searchUser" "sv" "Fortsätt"
 "register.company.add-user.submit" "fi" "Kutsu"
 "register.company.add-user.submit" "sv" "Inbjudan"
-"register.company.create.help" "fi" "Jos sinulla on jo käyttäjätili, kirjaudu palveluun ja perusta yrityksen tili omat tiedot-sivulta. Jos sinulla ei ole käyttäjätiliä, rekisteröidy ja luo yritystili tästä."
-"register.company.create.help" "sv" "Om du redan har ett användarkonto, logga in i tjänsten och inrätta företagets konto på sidan Mina uppgifter. Om du inte har ett användarkonto, registrera dig och inrätta företagets konto här."
+"register.company.create.help" "fi" "Jos sinulla on jo käyttäjätili Lupapisteessä, pystyt rekisteröimään Yritystilin <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen#Rekisteroinnin_aloitus_8211_uusi_tai_olemassaoleva_kayttaja\" target=\"_blank\">\"Omat tiedot\"-sivulta</a>. Jos sinulla ei ole käyttäjätiliä palvelussa, jatka Yritystilin rekisteröintiin valitsemalla alta \"Rekisteröi yritys\"."
+"register.company.create.help" "sv" ""
 "register.company.custom.title" "fi" "Räätälöity yritystili"
 "register.company.custom.title" "sv" "Skräddarsytt företagskonto"
 "register.company.form.accountType" "fi" "Tilityyppi"
@@ -3785,10 +3785,10 @@
 "register.company.form.lastName" "sv" "Efternamn:"
 "register.company.form.personId" "fi" "Henkilötunnus"
 "register.company.form.personId" "sv" "Personnummer"
-"register.company.header" "fi" "Rekisteröi yritys Lupapisteen käyttäjäksi"
-"register.company.header" "sv" "Registrera företag som Lupapiste-användare"
-"register.company.info" "fi" "Tekemällä <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">yrityssopimuksen</a> Lupapisteen kanssa annat työntekijöillesi tai kollegoillesi mahdollisuuden osallistua yhteisten hankkeiden valmisteluun ja helpotat yrityksesi asiointia. Tarjoamme yritysasiakkaillemme myös erityisiä lisäpalveluita ja parempia tukitasoja. Kun <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">rekisteröit valitsemasi yritystilin</a> ja hyväksyt sopimuksen, luomme sinulle pääkäyttäjätilin, jonka avulla voit hallita yrityksesi tietoja ja käyttäjätilejä. Sopimus tehdään helposti sähköisen allekirjoituspalvelun avulla. Yrityssopimuksen allekirjoituksessa käytetään henkilökohtaisia pankkitunnuksia, jotta saamme varmuuden allekirjoittajan henkilöllisyydestä, joten varaa lähettyvillesi henkilökohtaiset tunnuksesi."
-"register.company.info" "sv" "Genom att ingå <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">företagsavtal</a> med Lupapiste ger du dina anställda eller kolleger möjlighet att delta i beredningen av  gemensamma projekt och underlättar skötseln av företagets ärenden. Vi erbjuder också särskilda tilläggstjänster och stöd på högre nivå för våra företagskunder . Om du <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">registrerar ett företagskonto enligt eget val</a> och godkänner avtalet, skapar vi för dig ett huvudanvändarkonto därifrån du kan administrera företagets uppgifter och användarkonton . Det är lätt att ingå avtalet genom den elektroniska underteckningstjänsten. För att underteckna avtalet använder du dina personliga bankkoder, för att vi ska kunna vara säkra på undertecknarens identitet. Se alltså till att du har bankkoderna i närheten."
+"register.company.header" "fi" "Rekisteröi organisaatiollesi maksullinen Lupapisteen yritystili"
+"register.company.header" "sv" "Registrera ett avgiftsbelagd företagskonto för din organisation i Lupapiste"
+"register.company.info" "fi" "Yrityksen edustaja voi joko rekisteröityä veloituksetta käyttäjäksi (yllä oleva vaihtoehto) tai avata organisaatiolle maksullisen <a href=\"https://www.lupapiste.fi/yrityksille\" target=\"_blank\">Yritystilin</a> yhteistä hankehallintaa varten. Yritystilin avulla organisaation Lupapiste-hankkeita voidaan hallinnoida ja seurata yhteisessä työtilassa sekä hoitaa valtuutukset hankkeille keskitetysti. Kun <a href=\"https://www.lupapiste.fi/ohjeet/yrityksille/yritystilin-rekisterointi-ja-kirjautuminen\" target=\"_blank\">rekisteröit valitsemasi Yritystilin</a> ja hyväksyt <a href=\"https://www.lupapiste.fi/wp-content/uploads/2015/12/Lupapiste_Yritystilisopimus_Pohja.pdf\" target=\"_blank\">Yritystilisopimuksen</a>, luomme sinulle pääkäyttäjätilin, jonka avulla voit hallita yrityksesi tietoja, Yritystilin käyttäjiä sekä hyväksyä Yritystilille osoitetut valtuutuskutsut. Yritystilisopimus tehdään helposti sähköisen allekirjoituspalvelun avulla. Yritystilisopimuksen allekirjoituksessa käytetään henkilökohtaisia pankkitunnuksia, jotta saamme varmuuden allekirjoittajan henkilöllisyydestä. Varaathan siis pankkitunnukset lähettyvillesi."
+"register.company.info" "sv" ""
 "register.company.onnistuu.desc" "fi" "Onnistuu.fi tarjoaa sähköisen, turvallisen sopimuspalvelun, jossa voit allekirjoittaa sopimuksia pankkitunnuksilla tai mobiilivarmarmenteella."
 "register.company.onnistuu.desc" "sv" "Onnistuu.fi erbjuder en elektronisk, trygg avtalstjänst, där du kan underteckna avtal med bankkoder eller mobilcertifikat."
 "register.company.onnistuu.poweredby" "fi" "Palvelun tarjoaa Suomen Onlineallekirjoitus Oy."
@@ -3835,16 +3835,16 @@
 "register.expired-link.message" "sv" "Länken i din e-post har föråldrats. Du kan ändå registrera dig på normalt vis och ange din e-postadress på nytt. Efter registreringen får du instruktioner om hur du aktiverar ditt användar-ID."
 "register.expired-link.title" "fi" "Vanhentunut linkki"
 "register.expired-link.title" "sv" "Fåråldrad länk"
-"register.header" "fi" "Rekisteröidy Lupapisteen käyttäjäksi"
-"register.header" "sv" "Registrera dig som användare i Lupapiste"
-"register.header1" "fi" "Rekisteröidy Lupapisteen käyttäjäksi 1/3"
-"register.header1" "sv" "Registrera dig som användare i Lupapiste 1/3"
-"register.header2" "fi" "Rekisteröidy Lupapisteen käyttäjäksi 2/3"
-"register.header2" "sv" "Registrera dig som användare i Lupapiste 2/3"
-"register.header3" "fi" "Rekisteröidy Lupapisteen käyttäjäksi 3/3"
-"register.header3" "sv" "Registrera dig som användare i Lupapiste 3/3"
-"register.info" "fi" "Tervetuloa Lupapisteen käyttäjäksi. Lupapiste on uudenlainen sähköinen palvelu, jossa kansalaiset, yritykset ja yhteisöt hoitavat lupa- ja ilmoitusasiansa vuorovaikutuksessa viranomaisten ja muiden osapuolten kanssa. Koska Lupapisteessä käsitellään luottamuksellisia ja luvanvaraisia tietoja, Lupapisteen käyttäjien henkilöllisyys täytyy varmistaa verkkopankkitunnusten tai mobiilivarmenteen avulla. <strong>Yrityksen verkkopankkitunnuksella tai mobiilivarmenteella rekisteröityminen ei onnistu, joten käytä henkilökohtaisia tunnuksiasi.</strong>"
-"register.info" "sv" "Välkommen som användare i Lupapiste! Lupapiste är en ny sorts elektronisk tjänst, där medborgare, företag och samfund kan sköta sina tillstånds- och anmälningsärenden i växelverkan med myndigheter och andra berörda parter. Eftersom Lupapiste behandlar konfidentiella och tillståndspliktiga uppgifter , måste Lupapistes användares identitet autentiseras med hjälp av nätbankskoder eller mobilcertifikat. <strong>Det går inte att registrera sig med  ett företags nätbankskoder eller mobilcertifiering, så använd dina privata koder.</strong>"
+"register.header" "fi" "Rekisteröi veloitukseton Lupapisteen käyttäjätili"
+"register.header" "sv" "Registrera ett avgiftsfri använderkonto i Lupapiste"
+"register.header1" "fi" "Rekisteröi veloitukseton Lupapisteen käyttäjätili (1/3)"
+"register.header1" "sv" "Registrera ett avgiftsfri använderkonto i Lupapiste (1/3)"
+"register.header2" "fi" "Rekisteröi veloitukseton Lupapisteen käyttäjätili (2/3)"
+"register.header2" "sv" "Registrera ett avgiftsfri använderkonto i Lupapiste (2/3)"
+"register.header3" "fi" "Rekisteröi veloitukseton Lupapisteen käyttäjätili (3/3)"
+"register.header3" "sv" "Registrera ett avgiftsfri använderkonto i Lupapiste (3/3)"
+"register.info" "fi" "Tervetuloa Lupapisteen käyttäjäksi. Lupapiste on uudenlainen sähköinen palvelu, jossa kansalaiset, yritykset ja yhteisöt hoitavat lupa- ja ilmoitusasiansa vuorovaikutuksessa viranomaisten ja muiden osapuolten kanssa. Koska Lupapisteessä käsitellään luottamuksellisia ja luvanvaraisia tietoja, Lupapisteen käyttäjien henkilöllisyys täytyy varmistaa verkkopankkitunnusten tai mobiilivarmenteen avulla.<br /><br /><strong>Yrityksen verkkopankkitunnuksella tai mobiilivarmenteella rekisteröityminen ei onnistu, joten käytä henkilökohtaisia tunnuksiasi.</strong>"
+"register.info" "sv" "Välkommen som användare i Lupapiste! Lupapiste är en ny sorts elektronisk tjänst, där medborgare, företag och samfund kan sköta sina tillstånds- och anmälningsärenden i växelverkan med myndigheter och andra berörda parter. Eftersom Lupapiste behandlar konfidentiella och tillståndspliktiga uppgifter , måste Lupapistes användares identitet autentiseras med hjälp av nätbankskoder eller mobilcertifikat.<br /><br /><strong>Det går inte att registrera sig med  ett företags nätbankskoder eller mobilcertifiering, så använd dina privata koder.</strong>"
 "register.personal-info" "fi" "Ole hyvä, tarkista tietosi ja täytä puuttuvat kentät. Huomioithan, että sähköpostiosoitteesi, jota käytät rekisteröityessäsi palveluun, toimii jatkossa käyttäjätunnuksenasi eikä sähköpostiosoitetta pysty enää jälkikäteen palvelussa muuttamaan."
 "register.personal-info" "sv" "Kontrollera dina uppgifter och fyll i tomma fält. Observera att den e-postadress du använder när du registrerar dig i tjänsten i fortsättningen fungerar som ditt användar-ID och inte går att ändra i efterhand."
 "register.rakentajafi" "fi" "Haluan liittyä Rakentaja.fi-palvelun jäseneksi ja saan <strong>150 €</strong> arvoisen sähköisen tietopaketin. <strong>Jäsenyys on maksutonta.</strong> Rakentaja.fi-palvelua tuottaa Sanoma Media Finland Oy."
