Changed localization "Kuvaus toiminnasta" -> "Kuulutus"

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -456,8 +456,8 @@
 "application.tabConversation" "sv" "Diskussionstråd"
 "application.tabInfo" "fi" "Hakemuksen tiedot"
 "application.tabInfo" "sv" "Ansökans uppgifter"
-"application.tabInstructions.proclaimed" "fi" "Kuvaus toiminnasta"
-"application.tabInstructions.proclaimed" "sv" "Beskrivning av funktionen"
+"application.tabInstructions.proclaimed" "fi" "Kuulutus"
+"application.tabInstructions.proclaimed" "sv" "Kungörelsen"
 "application.tabInstructions.verdictGiven" "fi" "Päätöskuulutus"
 "application.tabInstructions.verdictGiven" "sv" "Beslutskungörelse"
 "application.tabParties" "fi" "Osapuolet"
@@ -958,8 +958,8 @@
 "attachmentType.kiinteiston_hallinta.yhtiojarjestys.info" "sv" ""
 "attachmentType.koeluontoinen_toiminta._group_label" "fi" "Koeluontoinen toiminta"
 "attachmentType.koeluontoinen_toiminta._group_label" "sv" "Försöksartad verksamhet"
-"attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta" "fi" "Kuvaus toiminnasta"
-"attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta" "sv" "Beskrivning av verksamhet"
+"attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta" "fi" "Kuulutus"
+"attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta" "sv" "Kungörelsen"
 "attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta.info" "fi" ""
 "attachmentType.koeluontoinen_toiminta.kuvaus_toiminnasta.info" "sv" ""
 "attachmentType.koeluontoinen_toiminta.paasto_arviot" "fi" "Päästöt ja arvio niiden vaikutusksista"
@@ -1702,8 +1702,8 @@
 "bulletin.proclamation.startsAt" "sv" "Kungörelsen börjar"
 "bulletin.proclamation.text" "fi" "Kuulutusteksti"
 "bulletin.proclamation.text" "sv" "Kungörelsens text"
-"bulletin.proclamation.text.placeholder" "fi" "Kirjoita kuvaus toiminnasta..."
-"bulletin.proclamation.text.placeholder" "sv" "Skriv beskrivning av funktionen…"
+"bulletin.proclamation.text.placeholder" "fi" "Kirjoita kuulutus..."
+"bulletin.proclamation.text.placeholder" "sv" "Skriv kungörelsen..."
 "bulletin.publish" "fi" "Julkaise"
 "bulletin.publish" "sv" "Kungör"
 "bulletin.search.button" "fi" "Näytä lisää hakutuloksia"
