Changed localization texts in dialog-valtuutus (application.html)

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -2855,8 +2855,8 @@
 "invite.already-has-auth" "sv" "Ifrågavarande person har redan bjudits in."
 "invite.default-text" "fi" "Hei! Sinut on kutsuttu osallistumaan lupahakemuksen tekemiseen Lupapisteessä."
 "invite.default-text" "sv" "Hej! Du har valts ut att delta i uppgörandet av en tillståndsansökan i Lupapiste."
-"invite.desc" "fi" "Voit valtuuttaa henkilön kutsumalla hänet sähköpostilla. Tällöin hän saa oikeudet muokata hakemusta ja perinteistä valtakirjaa vastaavat oikeudet asioida puolestasi."
-"invite.desc" "sv" "Du kan befullmäktiga en person genom att bjuda in denne per e-post. Då får denne rätt att redigera ansökan och rättigheter motsvarande en traditionell fullmakt att uträtta ärenden i ditt ställe."
+"invite.desc" "fi" "Voit valtuuttaa henkilön kutsumalla hänet sähköpostilla. Sähköinen valtuutus vastaa perinteistä valtakirjaa. Valtuutuksen hyväksyminen antaa henkilölle oikeudet muokata hakemusta ja asioida puolestasi."
+"invite.desc" "sv" "Du kan befullmäktiga en person genom att bjuda in denne per e-post. Elektronisk behörigheten motsvarar en traditionell fullmakt. När behörigheten är accepterat, får denne rätt att redigera ansökan och rättigheter att uträtta ärenden i ditt ställe."
 "invite.error.missing-parameters" "fi" "Täytä kaikki kentät."
 "invite.error.missing-parameters" "sv" "Fyll i alla fält."
 "invite.foreman.desc" "fi" "Voit kutsua työnjohtajan mukaan hankkeellesi antamalla hänen sähköpostiosoitteensa. Saatuaan kutsun, työnjohtaja voi tulla täyttämään tietonsa työnjohtajan ilmoitukselle. Samalla työnjohtaja saa oikeudet hoitaa rakentamisen aikaista asiointia hankkeellasi Lupapisteen kautta.<br>Jos et halua kutsua työnjohtajaa, voit jättää sähköpostiosoitteen tyhjäksi. Tällöin tarvitset työnjohtajalta valtakirjan työnjohtajan ilmoitusta varten."
