Misc valtuutus-related localization fixes.

--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -23,7 +23,7 @@
 "accept-company-invitation.title" "fi" "Hakemuksen liittäminen yrityksen tiliin"
 "accept-company-invitation.title" "sv" "Lägg till en ansökan till ett företagskonto"
 "accepted" "fi" "Hyväksynyt valtuutuksen"
-"accepted" "sv" "Har godkänt  fullmakten"
+"accepted" "sv" "Har godkänt fullmakten"
 "accordions.toggle-all" "fi" "Avaa/Sulje kaikki"
 "accordions.toggle-all" "sv" "Öppna/stäng alla"
 "acknowledged.title" "fi" "Vastuusi on tullut voimaan ilmoituksen jättämisestä alkaen."
@@ -288,8 +288,8 @@
 "application.id" "sv" "Behandlingsbeteckning:"
 "application.informBuildingReady" "fi" "Ilmoita hankkeesi valmistuneeksi"
 "application.informBuildingReady" "sv" "Meddela att ditt projekt är färdigt"
-"application.invite.help" "fi" "Sinut on valtuutettu tälle hankkeelle. Näet hankkeen lukutilassa. Hyväksyttyäsi valtuutuksen saat kirjoitusoikeudet hankkeelle. Tällöin voit muokata hankkeen tietoja ja lisätä uusia liitteitä ja suunnitelmia. Valtuutus vastaa perinteistä valtakirjaa."
-"application.invite.help" "sv" "Du har behörighet för detta projekt. Du kan se projektet i läsläge. När du har accepterat behörigheten har du rätt att skriva i projektet. Då kan du bearbeta projektets data samt lägga till nya bilagor och planer. Behörigheten motsvarar en traditionell fullmakt."
+"application.invite.help" "fi" "Sinut on kutsuttu tälle hankkeelle. Näet hankkeen lukutilassa. Hyväksyttyäsi valtuutuksen saat kirjoitusoikeudet hankkeelle. Tällöin voit muokata hankkeen tietoja ja lisätä uusia liitteitä ja suunnitelmia. Valtuutus vastaa perinteistä valtakirjaa."
+"application.invite.help" "sv" "Du har inbjudits för detta projekt. Du kan se projektet i läsläge. När du har accepterat behörigheten har du rätt att skriva i projektet. Då kan du bearbeta projektets data samt lägga till nya bilagor och planer. Behörigheten motsvarar en traditionell fullmakt."
 "application.inviteDialogText" "fi" "Sinut on kutsuttu tälle hakemukselle. Voit hyväksyä kutsun heti tai jatkaa hakemuksen katseluun."
 "application.inviteDialogText" "sv" "Du har inbjudits till denna ansökning. Du kan godkänna inbjudan genast eller fortsätta till visning av ansökningen."
 "application.inviteMessage" "fi" "Viesti"
