--- a/resources/i18n/common.txt
+++ b/resources/i18n/common.txt
@@ -1768,6 +1768,8 @@
 "bulletins.vetuma.cancel" "sv" "Vetuma-identifieringen avbröts"
 "bulletins.vetuma.error" "fi" "Vetuma-tunnistautuminen epäonnistui"
 "bulletins.vetuma.error" "sv" "Vetuma-identifieringen misslyckades"
+"bulletins.vetuma.info" "fi" "<b>Jättääksesi mielipiteen tai muistutuksen, sinun tulee tunnistautua henkilökohtaisilla pankkitunnuksilla tai mobiilivarmenteella.</b>"
+"bulletins.vetuma.info" "sv" "<b>För att avge åsikt eller anmärkning, din identitet måste autentiseras med hjälp av nätbankskoder eller mobilcertifikat.</b>"
 "button.ok" "fi" "OK"
 "button.ok" "sv" "OK"
 "canceled.title" "fi" "Hakemus on merkitty peruutetuksi"
